--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jspdf": "^3.0.1",
     "next": "15.3.4",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
